--- a/views/fun.ejs
+++ b/views/fun.ejs
@@ -23,9 +23,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                   <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="#">board</a>
-                    <a class="nav-link" href="#">내취미</a>
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    <a class="nav-link" href="../borad">borad</a>
+                    <a class="nav-link" href="/fun">내 취미</a>
                   </div>
                 </div>
               </div>
