--- a/views/board.ejs
+++ b/views/board.ejs
@@ -25,8 +25,9 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
-          <a class="nav-link" href="/borad">borad</a>
-          <a class="nav-link" href="/fun">내 취미</a>
+          <a class="nav-link" href="/board">board</a>
+          <a class="nav-link" href="/index/user">회원가입</a>
+          <a class="nav-link" href="/index/login">로그인</a>
         </div>
       </div>
     </div>
@@ -39,12 +40,12 @@
     function get_posts(){
       $.ajax({
         type:"GET",
-        url:"/api/borad",
+        url:"/api/board",
         data:{},
         success:function(response){
-          let board = response['Borad']
-          for(let i  =0 ; i < board.length; i++){
-            let tempHtml = `<tr onClick="location.href='/borad/read?boradId=${board[i]["id"]}'" >
+          let board = response['Board']
+          for(let i  = 0; i < board.length; i++){
+            let tempHtml = `<tr onClick="location.href='/board/read?boardId=${board[i]["id"]}'" >
                               <td>${board[i]['author']}</td>
                               <td>${board[i]['title']}</td>
                               <td>${board[i]['create_date']}</td>              
@@ -58,9 +59,9 @@
 </head>
 <title> 게시판 </title>
 <body>
-  <h1> borad </h1>
+  <h1> 게시판 </h1>
   <div class="button">
-    <a button type="button"  href='/borad/write'>글 작성</button></a>
+    <a button type="button"  href='/board/write'>글 작성</button></a>
   </div><br>
   <br>
   <table class="table">
