--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,8 +24,9 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
-          <a class="nav-link" href="../borad">borad</a>
-          <a class="nav-link" href="/fun">내 취미</a>
+          <a class="nav-link" href="../board">board</a>
+          <a class="nav-link" href="/index/user">회원가입</a>
+          <a class="nav-link" href="/index/login">로그인</a>
         </div>
       </div>
     </div>
