--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,8 +25,12 @@
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
           <a class="nav-link" href="../board">board</a>
-          <a class="nav-link" href="/index/user">회원가입</a>
-          <a class="nav-link" href="/index/login">로그인</a>
+          <a class="nav-link" href="/index/user">회원가입</a>          
+          <a class="nav-link" href="/index/login" onclick="if(this.value === 'login"){
+            login.(function())
+          } else {
+
+          }>로그인</a>
         </div>
       </div>
     </div>
