--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,22 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link" href="/index/user">회원가입</a>
+          <a class="nav-link" id="toggleLogin" href="/index/login">로그인</a>  
+        </div>
+      </div>
+    </div>
+  </nav>
 </head>
 <script>
         function login() {
-      let pw = $("#pw").val()
-          alert(짠)
+      let email = $("#email").val() || "test@test.com"
+      let password = $("#password").val() ||"1234";
+      
             $.ajax({
-              type: "PUT",
-              url: "/api/user",      //req .파라미터로 id확인가능.. 흑.. 주입되는건 많은데 수용력이 부족하다
+              type: "POST",
+              url: "/api/user/me",      //req .파라미터로 id확인가능.. 흑.. 주입되는건 많은데 수용력이 부족하다
               data: {
                   'email' : email,
-                  'pssword' : pssword,
+                  'pssword' : password,
               },
               success: function(response) {
                 if (response["result"] == "success") {
                   alert('확인완료')
-                  window.location.href ="/board"
+                  
+                  window.location.href ="/board?islogin="
                 } else {
                   alert('틀렸어용ㅠㅠ')
                 }
@@ -26,9 +55,9 @@
 </script>
 <body>
 <div class="input">
-    email <input type="text" id="author"  size="20"><br>
+    email <input type="text" id="email"  size="20"><br>
     <p></p>
-    password: <input type="text" id="pw" maxlength="5" size="5"><br>
+    password: <input type="text" id="password" maxlength="5" size="5"><br>
     <p></p>
     <button onclick="login()">로그인</button>
     
